[tool.poetry]
name = "cf-u"
version = "0.1.0"
description = ""
authors = ["Aksshai Nair <aksshainair.work@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
cfu= "cf_u.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
pandas = "^2.2.0"
bs4 = "^0.0.2"
rich = "^13.7.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
